refactor: FacilityHandler 경고 정리(getFirst 사용, 불필요 default 제거) 및 buildingId 유효성 보강